# GEA

GEA2023-main/: CMakeLists.txt
GEA2023-main/src/Game/: Game.cpp  Game.h
GEA2023-main/src/Pong/: Pong.cpp  Systems.h
GEA2023-main/src/Scene/: Scene.h
game-engines-v2/: CMakeLists.txt
game-engines-v2-04-SpriteLoading/: CMakeLists.txt
game-engines-v2-04-SpriteLoading/src/ECS/: Components.h  Entity.h  System.h
game-engines-v2-04-SpriteLoading/src/Game/: Game.cpp  Game.h
game-engines-v2-04-SpriteLoading/src/Game/Graphics/: TextureManager.cpp
game-engines-v2-04-SpriteLoading/src/Pong/: Components.h  Pong.cpp  Pong.h  Systems.cpp  Systems.h
game-engines-v2-04-SpriteLoading/src/Scene/: Scene.cpp
game-engines-v2/src/Game/: ScriptingManager.h
game-engines-v2/src/Pong/: Systems.cpp
